RESOLVED FIXED 210350
REGRESSION: (r259850)[ Mac wk1 Debug ] media/track/track-user-stylesheet.html is flaky failing.
https://bugs.webkit.org/show_bug.cgi?id=210350
Summary REGRESSION: (r259850)[ Mac wk1 Debug ] media/track/track-user-stylesheet.html...
Jason Lawrence
Reported 2020-04-10 11:37:41 PDT
media/track/track-user-stylesheet.html Description: This test is flaky failing on Mac wk1 Debug. The test appears to have regressed on r259850. History: https://results.webkit.org/?suite=layout-tests&test=media%2Ftrack%2Ftrack-user-stylesheet.html&flavor=wk1&platform=mac&style=debug Diff: --- /Volumes/Data/slave/mojave-debug-tests-wk1/build/layout-test-results/media/track/track-user-stylesheet-expected.txt +++ /Volumes/Data/slave/mojave-debug-tests-wk1/build/layout-test-results/media/track/track-user-stylesheet-actual.txt @@ -11,9 +11,9 @@ EVENT(seeked) ** Track should be visible, cue should be styled appropriately. ** -EXPECTED (video.textTracks[0].mode == 'showing') OK -EXPECTED (getComputedStyle(textTrackDisplayElement(video, 'cue')).color == 'rgb(0, 0, 255)') OK -EXPECTED (getComputedStyle(textTrackDisplayElement(video, 'cue')).backgroundColor == 'rgb(255, 255, 0)') OK +EXPECTED (video.textTracks[0].mode == 'showing'), OBSERVED 'disabled' FAIL +No text track cue with display id 'cue' is currently visible +No text track cue with display id 'cue' is currently visible ** Remove the video from the document, add it back. ** RUN(video.parentNode.removeChild(video))
Attachments
Patch (3.80 KB, patch)
2020-04-10 13:21 PDT, Peng Liu
no flags
Radar WebKit Bug Importer
Comment 1 2020-04-10 11:38:02 PDT
Jason Lawrence
Comment 2 2020-04-10 11:43:13 PDT
I am able to reproduce this issue with r259868 and r259850, but I cannot reproduce the issue on r259849 using this command: run-webkit-tests --iterations 99 --exit-after-n-failures 3 --force -f --debug -1 media/track/track-user-stylesheet.html r259850: [6/99] media/track/track-user-stylesheet.html failed unexpectedly (text diff) [6/99] media/track/track-user-stylesheet.html failed unexpectedly (text diff) [6/99] media/track/track-user-stylesheet.html failed unexpectedly (text diff) Exiting early after 3 failures. 3 tests run. 0 tests ran as expected, 3 didn't (96 didn't run): r259849: All 99 tests ran as expected.
Peng Liu
Comment 3 2020-04-10 13:21:56 PDT
EWS
Comment 4 2020-04-10 16:37:24 PDT
Committed r259912: <https://trac.webkit.org/changeset/259912> All reviewed patches have been landed. Closing bug and clearing flags on attachment 396114 [details].
Note You need to log in before you can comment on or make changes to this bug.