REGRESSION: (r259850)[ Mac wk1 Debug ] media/track/track-user-stylesheet.html is flaky failing. https://bugs.webkit.org/show_bug.cgi?id=210350

Reviewed by Daniel Bates.

Source/WebCore:

Revert the change in r259850.

* page/CaptionUserPreferences.cpp:
(WebCore::CaptionUserPreferences::setCaptionsStyleSheetOverride):

LayoutTests:

Make the test reliable by replacing the timer-based approach with testExpectedEventually.

* media/track/track-user-stylesheet.html:


Canonical link: https://commits.webkit.org/223258@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259912 268f45cc-cd09-0410-ab3c-d52691b4dbfc